--- a/EmployeeManagementSystem/Views/Employee/Edit.cshtml
+++ b/EmployeeManagementSystem/Views/Employee/Edit.cshtml
@@ -1,39 +1,46 @@
-﻿@model Employee
+﻿@model EmployeeManagementSystem.Models.Employee
 
-<h1>Create New Employee</h1>
+<h1>Update Employee Details</h1>
 
-<form asp-action="Create" method="post">
+<form asp-action="Edit" method="post">
+    <input type="hidden" asp-for="EmployeeID" />
+
     <div class="form-group">
         <label asp-for="FirstName">First Name:</label>
         <input asp-for="FirstName" class="form-control" />
         <span asp-validation-for="FirstName" class="text-danger"></span>
     </div>
+
     <div class="form-group">
         <label asp-for="LastName">Last Name:</label>
         <input asp-for="LastName" class="form-control" />
         <span asp-validation-for="LastName" class="text-danger"></span>
     </div>
+
     <div class="form-group">
         <label asp-for="Contact">Contact:</label>
         <input asp-for="Contact" class="form-control" />
         <span asp-validation-for="Contact" class="text-danger"></span>
     </div>
+
     <div class="form-group">
         <label asp-for="Address">Address:</label>
         <input asp-for="Address" class="form-control" />
         <span asp-validation-for="Address" class="text-danger"></span>
     </div>
+
     <div class="form-group">
         <label asp-for="Age">Age:</label>
         <input asp-for="Age" class="form-control" />
         <span asp-validation-for="Age" class="text-danger"></span>
     </div>
+
     <div class="form-group">
         <label asp-for="Salary">Salary:</label>
         <input asp-for="Salary" class="form-control" />
         <span asp-validation-for="Salary" class="text-danger"></span>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
 
-<a href="@Url.Action("Index")">Back to List</a>
+    <button type="submit" class="btn btn-primary">Update</button>
+</form>
+<a href="@Url.Action("Index")">Back to List</a> 
