--- a/EmployeeManagementSystem/Views/Employee/Create.cshtml
+++ b/EmployeeManagementSystem/Views/Employee/Create.cshtml
@@ -31,9 +31,32 @@
     <div class="form-group">
         <label asp-for="Salary">Salary:</label>
         <input asp-for="Salary" class="form-control" />
-        <span asp-validation-for="Salary" class="text-danger"></span>
+        <span asp
+            -validation-for="Salary" class="text-danger"></span>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <div class="form-group">
+        <label>District</label>
+        <select id="districtDropdown" class="form-control">
+            <option value="">Select District</option>
+            @foreach (var district in Model.DistrictList)
+            {
+                <option value="@district.Id">@district.Name</option>
+            }
+        </select>
+    </div>
+    <div class="form-group">
+        <label>City</label>
+        <select id="cityDropdown" class="form-control">
+            <option value="">Select City</option>
+            
+        </select>
+    </div>
+
+    @*TEST*@
+
+
+
+    <button type="submit" class="btn btn-primary ">Submit</button>
 </form>
 
 <a href="@Url.Action("Index")">Back to List</a>
