dropdown city and district populated

--- a/EmployeeManagementSystem/Views/Employee/Create.cshtml
+++ b/EmployeeManagementSystem/Views/Employee/Create.cshtml
@@ -60,3 +60,6 @@
 </form>
 
 <a href="@Url.Action("Index")">Back to List</a>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/jquery/dist/jquery.js"></script>
+<script src="~/js/site.js"></script>
