--- a/EmployeeManagementSystem/Views/Home/Index.cshtml
+++ b/EmployeeManagementSystem/Views/Home/Index.cshtml
@@ -6,3 +6,6 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/jquery/dist/jquery.js"></script>
+<script src="~/js/site.js"></script>
