--- a/EmployeeManagementSystem/Views/Employee/Create.cshtml
+++ b/EmployeeManagementSystem/Views/Employee/Create.cshtml
@@ -36,7 +36,7 @@
     </div>
     <div class="form-group">
         <label>District</label>
-        <select id="districtDropdown" class="form-control">
+        <select id="districtDropdown" class="form-control" asp-for="District">
             <option value="">Select District</option>
             @foreach (var district in Model.DistrictList)
             {
@@ -46,7 +46,7 @@
     </div>
     <div class="form-group">
         <label>City</label>
-        <select id="cityDropdown" class="form-control">
+        <select id="cityDropdown" class="form-control" asp-for="City">
             <option value="">Select City</option>
             
         </select>
