--- a/EmployeeManagementSystem/Views/Employee/Create.cshtml
+++ b/EmployeeManagementSystem/Views/Employee/Create.cshtml
@@ -31,8 +31,7 @@
     <div class="form-group">
         <label asp-for="Salary">Salary:</label>
         <input asp-for="Salary" class="form-control" />
-        <span asp
-            -validation-for="Salary" class="text-danger"></span>
+        <span asp-validation-for="Salary" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label>District</label>
