--- a/EmployeeManagementSystem/Views/Employee/Edit.cshtml
+++ b/EmployeeManagementSystem/Views/Employee/Edit.cshtml
@@ -41,6 +41,38 @@
         <span asp-validation-for="Salary" class="text-danger"></span>
     </div>
 
+    <div class="form-group">
+        <label for="District">District</label>
+        <select id="districtDropdown" class="form-control" asp-for="District">
+            <option value="">Select District</option>
+            @foreach (var district in Model.DistrictList)
+            {
+                if (district.Id.ToString() == Model.District)
+                {
+
+                    <option value="@district.Id" selected>@district.Name</option>
+                }
+                else
+                {
+
+                    <option value="@district.Id">@district.Name</option>
+                }
+            }
+        </select>
+    </div>
+
+    <div class="form-group">
+        <label for="City">City</label>
+        <select id="cityDropdown" class="form-control" asp-for="City">
+            <option value="">Select City</option>
+
+
+        </select>
+        <input type="hidden" value="@Model.City" id="city"/>
+    </div>
+
     <button type="submit" class="btn btn-primary">Update</button>
 </form>
 <a href="@Url.Action("Index")">Back to List</a> 
+
+<script src="~/js/site.js"></script>
